IntelliJ code problems